test_suite/tests/macros/ui/invalid_scope.stderr
error: custom attribute panicked
 --> tests/macros/ui/invalid_scope.rs:3:1
  |
3 | #[provide(scope="global")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid scope: 'global', expected 'singleton' or 'scoped'
